<resources>
    <string name="app_name">ChemCaliba ED</string>
    <string name="instructions">Password should be of minimum 8 characters.\nPassword should be of maximum 16 characters.\nPassword must have atleast one upper case character.\nPassword must have atleast one digit.\nPassword must have atleast one special characters [!@#$%)*_(+=}{|:;,.>}].</string>

    <string name="app_nav_1">Home</string>
    <string name="app_nav_2">Our Courses</string>
    <string name="app_nav_3">Enrolled Courses</string>
    <string name="app_nav_4">Test Results</string>
    <string name="app_nav_5">Test Schedule</string>
    <string name="app_nav_6">Announcements</string>
    <string name="app_nav_7">P-T Meeting</string>
    <string name="app_nav_8">Holidays</string>
    <string name="app_nav_9">Log Out</string>
    <string name="app_nav_10">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="permission_rationale">Please grant location permission to start the service</string>
    <string name="title_alert_no_intenet">No internet</string>
    <string name="msg_alert_no_internet">Please make sure that you have active internet connection.</string>
    <string name="msg_alert">You have not purchased any course or your course is expired</string>
    <string name="msg_dat_not_found">Data Not found</string>
</resources>